--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
-    "name": "pdf-service",
-    "version": "1.0.0",
-    "type": "module",
-    "main": "server.js",
-    "scripts": {
-        "start": "node server.js"
-    },
-    "dependencies": {
-        "compression": "^1.8.1",
-        "express": "^4.21.2",
-        "helmet": "^7.2.0",
-        "playwright": "^1.55.0"
-    },
-    "description": "",
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/Maqoba-Jiyane/pdf-micro-service.git"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/Maqoba-Jiyane/pdf-micro-service/issues"
-    },
-    "homepage": "https://github.com/Maqoba-Jiyane/pdf-micro-service#readme"
+  "name": "pdf-service",
+  "version": "1.0.0",
+  "type": "module",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "compression": "1.7.4",
+    "express": "4.19.2",
+    "helmet": "7.1.0",
+    "playwright": "1.55.0"
+  },
+  "description": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Maqoba-Jiyane/pdf-micro-service.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Maqoba-Jiyane/pdf-micro-service/issues"
+  },
+  "homepage": "https://github.com/Maqoba-Jiyane/pdf-micro-service#readme"
 }
