--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "compression": "1.7.4",
-    "express": "4.19.2",
-    "helmet": "7.1.0",
-    "playwright": "1.55.0"
+    "compression": "^1.7.4",
+    "express": "^4.19.2",
+    "helmet": "^7.1.0",
+    "playwright": "^1.55.0"
   },
   "description": "",
   "repository": {
